fix: eventful overflow problem fixed

--- a/work/eventful.css
+++ b/work/eventful.css
@@ -1,5 +1,6 @@
 html {
     font-family: "Nunito", sans-serif;
+    overflow-x: hidden;
 }
 body {
     margin: 0;
